Mon Mar  3 14:52:58 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (MAC_SUBDIRS): Change KRB5 to krb5 for Mac subdirs.

Tue Feb 25 01:03:41 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: krb5_32.lib now also depends on gdi32.lib

Thu Feb 20 23:30:32 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Build krb4 dll; it built all the objs (win16/32)

Mon Feb 17 19:40:55 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Build krb4 library under Win16/Win32
	* krb4_16.def krb4_32.def: DLL definition files for krb4 library
	* krb5_16.def krb5_32.def: Export various des routines (krb4 dll)
	* win_glue.c: krb4 library support added

Fri Feb 14 16:40:03 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Build separate ComErr DLL
	* comerr16.def comerr32.def: ComErr exported API
	* krb5_16.def krb5_32.def: Removed ComErr/Win16 entries
	* no_glue.c: Dummy stub for ComErr (win16/win32)
	* win_glue.c: Win32 DLL startup/exit code added

Sat Feb  8 12:21:53 1997  Richard Basch  <basch@lehman.com>

	* krb5_16.def krb5_32.def:
		Export krb5_get_credentials_renew,krb5_get_credentials_validate

	* Makefile.in:
		Use WLIB definition in config/windows.in
		Attempt at making a functional SAP library build

Tue Feb  4 15:52:34 1997  Richard Basch  <basch@lehman.com>

	* krb5_16.def krb5_32.def: New ComErr interface definitions

	* gssapi32.def krb5_32.def:
		Remove unsupported statements (EXETYPE, RESIDENTNAME)

	* gssapi16.def krb5_16.def: Need to declare the library name (win16)

Thu Jan 30 21:27:07 1997  Richard Basch  <basch@lehman.com>

	* krb5_16.def krb5_32.def: 
		Export krb5_decrypt, krb5_encrypt,
		krb5_string_to_key, krb5_process_key, krb5_finish_key,
		krb5_init_random_key, krb5_finish_random_key,
		krb5_random_key, krb5_eblock_enctype
	* Makefile.in
		Win32 - Link against MSVCRT.LIB (runtime library)

Sat Dec 21 01:23:48 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* win_glue.c: Change the timebomb to be June 1, 1997.  Make the