@@ -1,72 +1,0 @@
-;----------------------------------------------------
-;   GSSAPI.DEF - GSSAPI.DLL module definition file
-;----------------------------------------------------
-
-LIBRARY		SAPKRB5
-DESCRIPTION	'Base Generic Security Service API for SAP R/3'
-EXETYPE		WINDOWS
-CODE		PRELOAD MOVEABLE DISCARDABLE
-DATA		PRELOAD MOVEABLE SINGLE
-HEAPSIZE	8192
-
-EXPORTS
-	WEP					@1001 RESIDENTNAME
-	LIBMAIN					@1002
-	GSS_ACQUIRE_CRED			@1
-	GSS_RELEASE_CRED			@2
-	GSS_INIT_SEC_CONTEXT			@3
-	GSS_ACCEPT_SEC_CONTEXT			@4
-	GSS_PROCESS_CONTEXT_TOKEN		@5
-	GSS_DELETE_SEC_CONTEXT			@6
-	GSS_CONTEXT_TIME			@7
-	GSS_SIGN				@8
-	GSS_VERIFY				@9
-	GSS_SEAL				@10
-	GSS_UNSEAL				@11
-	GSS_DISPLAY_STATUS			@12
-	GSS_INDICATE_MECHS			@13
-	GSS_COMPARE_NAME			@14
-	GSS_DISPLAY_NAME			@15
-	GSS_IMPORT_NAME				@16
-	GSS_RELEASE_NAME			@17
-	GSS_RELEASE_BUFFER			@18
-	GSS_RELEASE_OID_SET			@19
-	GSS_INQUIRE_CRED			@20
-
-; GSS-API v2  additional credential calls
-;
-; XXX we need to add the numbers to this!
-;
-	GSS_ADD_CRED
-	GSS_INQUIRE_CRED_BY_MECH
-
-; GSS-API v2  additional context-level calls
-;
-	GSS_INQUIRE_CONTEXT
-	GSS_WRAP_SIZE_LIMIT
-	GSS_EXPORT_SEC_CONTEXT
-	GSS_IMPORT_SEC_CONTEXT
-
-; GSS-API v2  additional calls for OID and OID_set operations
-;
-	GSS_RELEASE_OID
-	GSS_CREATE_EMPTY_OID_SET
-	GSS_ADD_OID_SET_MEMBER
-	GSS_TEST_OID_SET_MEMBER
-	GSS_OID_TO_STR
-	GSS_STR_TO_OID
-
-; GSS-API v2  renamed message protection calls
-;
-	GSS_WRAP
-	GSS_UNWRAP
-	GSS_GET_MIC
-	GSS_VERIFY_MIC
-
-; GSS-API v2  future extensions
-;
-	GSS_INQUIRE_NAMES_FOR_MECH
-;	GSS_INQUIRE_MECHS_FOR_NAME
-;	GSS_CANONICALIZE_NAME
-;	GSS_EXPORT_NAME
-
